# 6502_emulator

./: .gitmodules  CMakeLists.txt  README.md  main.c
src/: opcodes.h  type_definitions.h
src/CPU/: CPU.c  CPU.h
src/MEM/: MEM.c  MEM.h
tests/: CMakeLists.txt  main_test.c
